policy/overlays/nerc-ocp-prod/validate-ope-pods-constrainttemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredopepod
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredOPEPod
      validation:
        openAPIV3Schema:
          properties:
            image:
              type: string
            cpuLimit:
              type: string
            memLimit:
              type: string
            cpuRequest:
              type: string
            memRequest:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package K8sRequiredOPEPod

        # Verify class image
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          env_var := container.env[_]
          env_var.name == "JUPYTER_IMAGE"
          provided := env_var.value
          required := input.parameters.image
          provided != required
          msg := "Must use f24 image with xsmall resource size"
        }

        # Verify resource size
        violation[{"msg": msg}] {
          requiredCpuLimit := input.parameters.cpuLimit
          requiredMemoryLimit := input.parameters.memLimit
          requiredCpuRequest := input.parameters.cpuRequest
          requiredMemoryRequest := input.parameters.memRequest

          container := input.review.object.spec.containers[0]


          cpuLimit := container.resources.limits.cpu
          memLimit := container.resources.limits.memory
          cpuRequest := container.resources.requests.cpu
          memRequest := container.resources.requests.memory

          requiredCpuLimit != cpuLimit
          requiredMemoryLimit != memLimit
          requiredCpuRequest != cpuRequest
          requiredMemoryRequest != memRequest

          msg := "Must use f24 image with xsmall resource size"
        }
